# mcp-snowflake

./: .gitignore  .mcp_snowflake.toml.example  .ruff.toml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: development.md  settings.md
docs/tools/: analyze_table_statistics.md  describe_table.md  execute_query.md  list_databases.md  list_schemas.md  list_tables.md  profile_semi_structured_columns.md  sample_table_data.md  search_columns.md
src/mcp_snowflake/: __init__.py  __main__.py  cli.py  context.py  json_converter.py  settings.py  snowflake_client.py  sql_analyzer.py  stopwatch.py
stub/sqlparse/: __init__.pyi  __main__.pyi  cli.pyi  exceptions.pyi  formatter.pyi  keywords.pyi  lexer.pyi  sql.pyi  tokens.pyi  utils.pyi
tests/: test_cli.py  test_json_converter.py  test_settings.py  test_snowflake_client.py  test_sql_analyzer.py  test_tool_names.py  test_tool_registration.py
tests/adapter/: __init__.py
tests/cattrs_converter/: test_json.py
tests/expression/: test_option.py
tests/fixtures/: test.mcp_snowflake.toml
tests/handler/: _utils.py  conftest.py  test_data_processing.py  test_describe_table.py  test_execute_query.py  test_list_roles.py  test_list_schemas.py  test_list_tables.py  test_list_views.py  test_list_warehouses.py  test_sample_table_data.py
tests/kernel/: __init__.py  test_data_processing.py  test_data_types.py  test_sql_utils.py  test_statistics_support_column.py  test_table_metadata.py
tests/mock_effect_handler/: __init__.py  analyze_table_statistics.py  describe_table.py  execute_query.py  list_databases.py  list_roles.py  list_schemas.py  list_tables.py  list_views.py  list_warehouses.py  profile_semi_structured_columns.py  sample_table_data.py  search_columns.py
tests/query_registry/: __init__.py  conftest.py  test_logging_utils.py  test_registry.py  test_registry_basic_operations.py  test_registry_edge_cases.py  test_registry_error_handling.py  test_registry_integration.py  (+2 more)
(+214 files in other folders)
